# jkit

./: .gitignore  TODO.md  Untitled  pyproject.toml  requirements.txt
jkit/: .python-version  aio.py  aminoacids.py  async_multiproc.py  atom.py  distributions.py  kitty_backend.py  label_pack.py  latex_template.py  math_util.py  mcmc.py  molprobity.py  nmr.py  notes.txt  pdb.py  plot.py  pprint.py  seriation.py  spec_pred.py  structure.py  svg_collage.py  time_limit.py  tsp.py  util.py  warn_with_traceback.py
jkit/macos/: alarm.py  blocking_alert.py  overlay.py  timer.py
src/jkit/: __init__.py  amino_acid_data.json  amino_acids.py  kitty_backend.py  path.py  plot.py  util.py  warn_with_traceback.py
src/jkit/rich/: img.py
tests/: test_amino_acids.py  test_file_io.py  test_path.py  test_plot.py  test_util.py
